# filex

./: Cargo.toml
src/: main.rs
src/lib/: days.rs  disk.rs  file_size.rs  mod.rs
src/lib/file/: error.rs  info.rs  mod.rs
src/tests/: count.rs
